# rimmy

./: .gitignore  Cargo.toml  GNUmakefile  LICENSE  README.md  limine.conf  rust-toolchain.toml
rimmy_kernel/: Cargo.toml  GNUmakefile  build.rs  convert.py  kernel  linker-x86_64.ld
rimmy_kernel/.cargo/: config.toml
rimmy_kernel/src/: font.rs  lib.rs  main.rs
rimmy_kernel/src/arch/x86_64/: cpu_local.rs  gdt.rs  idt.rs  io.rs  mod.rs  power.rs  syscall.rs
rimmy_kernel/src/buffer/: stdin.rs
rimmy_kernel/src/console/: mod.rs
rimmy_kernel/src/driver/: mod.rs
rimmy_kernel/src/driver/cpu/: mod.rs
rimmy_kernel/src/driver/disk/: ata.rs  mod.rs
rimmy_kernel/src/driver/keyboard/: mod.rs
rimmy_kernel/src/driver/mouse/: mod.rs  ps2.rs
rimmy_kernel/src/driver/nic/: mod.rs  pcnet.rs  rtl8139.rs
rimmy_kernel/src/driver/timer/: cmos.rs  mod.rs  pit.rs
rimmy_kernel/src/driver/uart/: mod.rs
rimmy_kernel/src/driver/usb/: mod.rs
rimmy_kernel/src/driver/usb/uhci/: mod.rs
rimmy_kernel/src/framebuffer/: font.rs  mod.rs  writer.rs
rimmy_kernel/src/kernel_utils/: anirect.rs  cd.rs  curl.rs  date.rs  df.rs  dhcp.rs  echo.rs  exec.rs  gs.rs  install.rs  meminfo.rs  mkdir.rs  mod.rs  readelf.rs  rmdir.rs  serve.rs  shutdown.rs
rimmy_kernel/src/memory/: allocator.rs  mod.rs
rimmy_kernel/src/sys/: acpi.rs  clk.rs  mod.rs  rng.rs
rimmy_kernel/src/sys/console/: font.rs  framebuffer.rs  mod.rs  tty.rs
rimmy_kernel/src/sys/framebuffer/: mod.rs
rimmy_kernel/src/sys/fs/: mod.rs  partition.rs  vfs.rs
rimmy_kernel/src/sys/fs/devfs/: full.rs  mod.rs  null.rs  random.rs  zero.rs
rimmy_kernel/src/sys/fs/fat16/: mod.rs  runtime.rs
rimmy_kernel/src/sys/fs/fat32/: mod.rs
rimmy_kernel/src/sys/fs/ram_fs/: mod.rs  (+1 more)
rimmy_kernel/src/sys/memory/: bitmap.rs  heap.rs  mod.rs  phys.rs
rimmy_kernel/src/sys/net/: gw.rs  ip.rs  mac.rs  mod.rs  usage.rs
rimmy_kernel/src/sys/pci/: mod.rs
rimmy_kernel/src/sys/proc/: mem.rs  mod.rs  switch.rs  task.rs  user.rs
rimmy_kernel/src/sys/syscall/: memory.rs  mod.rs  service.rs  utils.rs
rimmy_kernel/src/task/: executor.rs  mod.rs  simple_executor.rs
rimmy_kernel/src/utils/: bitmap.rs  mod.rs  sync.rs
(+68 files in other folders)
