[package]
name = "rimmy_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
acpi = "5.0.0"
aml = "0.16.4"
crossbeam-queue = { version = "0.3.12", features = ["alloc"], default-features = false }
lazy_static = { version = "1.0.0", features = ["spin_no_std"] }
limine = "0.5.0"
linked_list_allocator = "=0.9.0"
pc-keyboard = "0.8.0"
pic8259 = { version = "0.11.0", features = ["nightly"] }
spin = "0.9.8"
iced-x86 = { version = "1.21.0", default-features = false, features = ["decoder", "no_std", "intel"] }
bitflags = "2.9.0"
sha2 = { version = "0.10.9", default-features = false, features = ["force-soft"] }
libm = "0.2.15"
time = { version = "0.2.27", default-features = false }
[target.'cfg(target_arch="x86_64")'.dependencies]
x86_64 = "0.15.2"
bit_field = "0.10.2"
conquer-once = { version = "0.4.0", default-features = false }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
raw-cpuid = { version = "11.5.0", default-features = false }
object = { version = "0.37.1", default-features = false, features = ["read"] }
smoltcp = { version = "0.12.0", default-features = false, features = ["alloc", "medium-ethernet", "socket-tcp", "socket-udp", "socket-dhcpv4", "proto-ipv4", "proto-dhcpv4"] }
rand = { version = "0.9.2", default-features = false }
rand_hc = "0.4.0"

intrusive-collections = "0.9"
memoffset = "0.9"

rimmy_common = { path = "../rimmy_common" }
rimmy_proc = { path = "../rimmy_proc" }

[profile.release]
debug = true