[package]
name = "rimmy_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-queue = { version = "0.3.12", features = ["alloc"], default-features = false }
lazy_static = { version = "1.0.0", features = ["spin_no_std"] }
limine = "0.5.0"
linked_list_allocator = "=0.9.0"
pc-keyboard = "0.8.0"
pic8259 = { version = "0.11.0", features = ["nightly"] }
spin = "0.9.8"
x86_64 = "0.15.2"
conquer-once = { version = "0.4.0", default-features = false }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }